--- a/currently.html
+++ b/currently.html
@@ -135,14 +135,15 @@
             padding: 15px;
             border-radius: 5px;
             box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-            display: inline-block; /* Ensure the frame ends after the content */
-            width: 300px; /* Set width to 300px to match the iframe */
-            height: auto; /* Adjust height to fit content */
+            display: flex;
+            flex-direction: column; /* Stack content vertically */
+            width: 300px; /* Set width to match the iframe */
+            height: auto; /* Dynamically adjust height based on content */
         }
 
-        .gallery-item video, .gallery-item iframe {
+        .gallery-item iframe {
             width: 100%; /* Ensure iframe takes full width of the gallery item */
-            height: auto; /* Adjust height to maintain aspect ratio */
+            height: 150px; /* Adjust the height as needed */
             border-radius: 5px;
             background: #000;
             display: block;
@@ -152,6 +153,7 @@
             margin-top: 10px;
             font-size: 1rem;
             color: #444;
+            text-align: left; /* Align text to the left */
         }
 
         .footer {
@@ -224,12 +226,12 @@
 <div class="header">
     <div class="tabs">
         <a href="https://damaris-guzman.github.io/damarisguzman.github.io/newmaris.html">New Media</a>
-        <a href="https://damarisguzman.neocities.org/video">Video Editing</a>
+        <a href="https://youtu.be/xvFZjo5PgG0?si=_09hVRRc5sLOPAKY">Video Editing</a>
     </div>
     <h1><a href="/about">Currently...</a></h1>
     <div class="tabs">
-        <a href="https://damarisguzman.neocities.org/3danimation">3D Animation</a>
-        <a href="https://damarisguzman.neocities.org/archive">Archive</a>
+        <a href="https://youtu.be/xvFZjo5PgG0?si=_09hVRRc5sLOPAKY">3D Animation</a>
+        <a href="https://youtu.be/xvFZjo5PgG0?si=_09hVRRc5sLOPAKY">Archive</a>
     </div>
 </div>
 
@@ -276,11 +278,11 @@
         <div class="description">
             This project centers around a short video that explores how human cognition and digital technology intertwine, illustrating a cycle of productivity, burnout, and digital embodiment. Influenced by posthumanist thought, the project blurs the boundary between human agency and algorithmic influence, showing how technology extends and distorts self-perception.
             <br><br>
-            Glitches, corrupted data, and intrusive notifications highlight the tension between human cognition and technological acceleration. The protagonist’s interface, layered with health metrics, emotional tracking, and a Tamagotchi-style wellness monitor, turns the body into an informatic system, always optimizing yet bound to fail. Borrowing from PC Music aesthetics and early internet kitsch, neon UI elements lend a hyper-stylized lens on digital embodiment.
+           The protagonist’s interface, layered with health metrics, emotional tracking, and a Tamagotchi-style wellness monitor, turns the body into an informatic system, always optimizing yet bound to fail. Borrowing from PC Music aesthetics and early internet kitsch, neon UI elements lend a hyper-stylized lens on digital embodiment.
             <br><br>
-            A diegetic control panel reflects the protagonist’s deteriorating mental state, with polished notifications interrupting at moments of peak overload, both narrative cues and commentary on the gamification of digital labor. As the protagonist snaps, the system plunges into glitch chaos, ending in a mutual burnout of mind and machine. The video is not only reflective of technological discourse but overall self-medication and addiction.
+            A diegetic control panel reflects the protagonist’s deteriorating mental state, with notifications interrupting at moments of peak overload, both narrative cues and commentary on the gamification of digital labor. As the protagonist snaps, the system plunges into glitch chaos, ending in a mutual burnout of mind and machine. The video is not only reflective of technological discourse but overall self-medication and addiction.
             <br><br>
-            Through experimental effects, UI-driven storytelling, and reflections on digital subjectivity, “Neuro Bytes” probes the pressures of technological embodiment, revealing how humans and machines continually shape each other in an era of algorithmic acceleration.
+            Through hyper-edited visuals, UI-driven storytelling, and reflections on digital subjectivity, “Neuro Bytes” probes the pressures of technological embodiment, revealing how humans and machines continually shape each other in an era of algorithmic acceleration.
         </div>
     </div>
 
@@ -312,22 +314,43 @@
 
         <!-- New Video Placeholder Frames -->
         <div class="gallery-item">
-            <iframe src="https://placeholder.com/300" 
+            <iframe src="https://drive.google.com/file/d/1c4khlrv39Qfp5mrUcU2o4J1RWrIATGcv/preview" 
                 width="300" height="300" allowfullscreen>
             </iframe>
             <div class="gallery-description">
-                <p><strong>Placeholder Video 1</strong></p>
-                <p>Description for the placeholder video 1.</p>
+                <p><strong>Inside Sequence p1</strong></p>
+                <p>Using After Effects, I animated a shifting, interconnected “organic body” that doesn’t think in words or logic but through movement and transformation. It represents an AI with a consciousness, inside an organic body. AI as something that is constantly adapting and functions like an unfolding process. The animation is fluid, responsive, almost organic in its behavior, rejecting the idea of AI as rigid, mechanical intelligence. It’s important to note that no, i didn’t use AI for any of these visuals. Made entirely in ae.</p>
             </div>
         </div>
 
         <div class="gallery-item">
-            <iframe src="https://placeholder.com/300" 
+            <iframe src="https://drive.google.com/file/d/1Qq5grgGN1mepIzF-80pDCablz4MaCJ6M/preview" 
                 width="300" height="300" allowfullscreen>
             </iframe>
             <div class="gallery-description">
-                <p><strong>Placeholder Video 2</strong></p>
-                <p>Description for the placeholder video 2.</p>
+                <p><strong>Inside Sequence p2</strong></p>
+                <p>But If AI’s perception of the world is shaped by data sets extracted from human activity - then its understanding of reality is a distorted, reconstructed version of us. AI doesn’t “see” the way we do; it predicts, interpolates, and generates. If human perception is mediated through our senses, AI’s perception is mediated through algorithms. </p>
+            </div>
+        </div>
+
+        <div class="gallery-item">
+            <iframe src="https://drive.google.com/file/d/164FlI3Y-JhjDk5dnZryHfpFHLsA1Mq6d/preview" 
+                width="300" height="300" allowfullscreen>
+            </iframe>
+            <div class="gallery-description">
+                <p><strong>Inside Sequence p3</strong></p>
+                <p>An abstract, fleshy-pink simulation that suggests swirling, organic forms, as though we’re peering into magnified tissue or vaporous clouds
+                </p>
+            </div>
+        </div>
+
+        <div class="gallery-item">
+            <iframe src="https://www.youtube.com/embed/9GxgujFhvas" 
+                width="300" height="300" allowfullscreen>
+            </iframe>
+            <div class="gallery-description">
+                <p><strong>Circuit</strong></p>
+                <p>The bright neon highlights, the deep-blue backdrop, and the swirling distortions create a sense of high-tech immersion, as if the viewer is peering into a living digital matrix.</p>
             </div>
         </div>
     </div>
@@ -335,12 +358,12 @@
     <!-- Placeholder for Interactive Panel -->
     <div class="right hidden" id="interactive-panel-gallery">
         <div class="gallery-item">
-            <iframe src="https://placeholder.com/300" 
+            <iframe src="https://drive.google.com/file/d/1nqYlf22bLAENsBPDH_l_4jEriyuK3fn8/preview" 
                 width="300" height="300" allowfullscreen>
             </iframe>
             <div class="gallery-description">
-                <p><strong>Interactive Panel Placeholder</strong></p>
-                <p>Description for the interactive panel placeholder.</p>
+                <p><strong>Interactive Control Panel</strong></p>
+                <p>This piece will be fabricated using laser cutters, 3D printers, Arduino LCD displays, and old buttons from kid toys. The control panel symbolizes technology’s illusion of control. Although the main character appears to adjust her internal state, monitoring and manipulating focus or mood, the panel itself ultimately does nothing. This parallels our perceived agency over internet use, despite hidden systems like data collection and addictive design that quietly shape our behavior. The panel becomes an “operational double,” giving the appearance of control while never actually altering reality.</p>
             </div>
         </div>
     </div>
@@ -348,12 +371,12 @@
     <!-- Placeholder for Video -->
     <div class="right hidden" id="full-video-gallery">
         <div class="gallery-item">
-            <iframe src="https://youtube.com/shorts/3IB28p7wyxw?feature=share" 
+            <iframe src="https://www.youtube.com/embed/3IB28p7wyxw" 
                 width="300" height="300" allowfullscreen>
             </iframe>
             <div class="gallery-description">
                 <p><strong>Draft video simulating shot list</strong></p>
-                <p>Mostly focused on showing the narrative. VFX not shown.</p>
+                <p>Mostly focused on showing the shot sequences. Lil VFX visible. The content of the display monitor shows the main character editing the video in real time.</p>
             </div>
         </div>
     </div>
