--- a/currently.html
+++ b/currently.html
@@ -278,8 +278,7 @@
         <div class="description">
             This project centers around a short video that explores how human cognition and digital technology intertwine, illustrating a cycle of productivity, burnout, and digital embodiment. Influenced by posthumanist thought, the project blurs the boundary between human agency and algorithmic influence, showing how technology extends and distorts self-perception.
             <br><br>
-           The protagonist’s interface, layered with health metrics, emotional tracking, and a Tamagotchi-style wellness monitor, turns the body into an informatic system, always optimizing yet bound to fail. Borrowing from PC Music aesthetics and early internet kitsch, neon UI elements lend a hyper-stylized lens on digital embodiment.
-            <br><br>
+           The protagonist’s interface, layered with health metrics, emotional tracking, and a Tamagotchi-style wellness monitor, turns the body into an informatic system, always optimizing yet bound to fail. 
             A diegetic control panel reflects the protagonist’s deteriorating mental state, with notifications interrupting at moments of peak overload, both narrative cues and commentary on the gamification of digital labor. As the protagonist snaps, the system plunges into glitch chaos, ending in a mutual burnout of mind and machine. The video is not only reflective of technological discourse but overall self-medication and addiction.
             <br><br>
             Through hyper-edited visuals, UI-driven storytelling, and reflections on digital subjectivity, “Neuro Bytes” probes the pressures of technological embodiment, revealing how humans and machines continually shape each other in an era of algorithmic acceleration.
