--- a/currently.html
+++ b/currently.html
@@ -317,7 +317,7 @@
                 width="300" height="300" allowfullscreen>
             </iframe>
             <div class="gallery-description">
-                <p><strong>Inside Sequence p1</strong></p>
+                <p><strong>Inside Sequence p1 (AE)</strong></p>
                 <p>Using After Effects, I animated a shifting, interconnected “organic body” that doesn’t think in words or logic but through movement and transformation. It represents an AI with a consciousness, inside an organic body. AI as something that is constantly adapting and functions like an unfolding process. The animation is fluid, responsive, almost organic in its behavior, rejecting the idea of AI as rigid, mechanical intelligence. It’s important to note that no, i didn’t use AI for any of these visuals. Made entirely in ae.</p>
             </div>
         </div>
@@ -327,7 +327,7 @@
                 width="300" height="300" allowfullscreen>
             </iframe>
             <div class="gallery-description">
-                <p><strong>Inside Sequence p2</strong></p>
+                <p><strong>Inside Sequence p2 (AE)</strong></p>
                 <p>But If AI’s perception of the world is shaped by data sets extracted from human activity - then its understanding of reality is a distorted, reconstructed version of us. AI doesn’t “see” the way we do; it predicts, interpolates, and generates. If human perception is mediated through our senses, AI’s perception is mediated through algorithms. </p>
             </div>
         </div>
@@ -337,7 +337,7 @@
                 width="300" height="300" allowfullscreen>
             </iframe>
             <div class="gallery-description">
-                <p><strong>Inside Sequence p3</strong></p>
+                <p><strong>Inside Sequence p3 (AE)</strong></p>
                 <p>An abstract, fleshy-pink simulation that suggests swirling, organic forms, as though we’re peering into magnified tissue or vaporous clouds
                 </p>
             </div>
@@ -350,6 +350,11 @@
             <div class="gallery-description">
                 <p><strong>Circuit</strong></p>
                 <p>The bright neon highlights, the deep-blue backdrop, and the swirling distortions create a sense of high-tech immersion, as if the viewer is peering into a living digital matrix.</p>
+           <p>3D modeled circuit board using Blender.</p>
+<p>Lights animated to flow through the circuit.</p>
+<p>Edited in After Effects using displacements.</pp>
+<p>Green “0’s = distorted motion graphics. </p>
+</p>
             </div>
         </div>
     </div>
