--- a/currently.html
+++ b/currently.html
@@ -402,6 +402,19 @@
                 <p>Mostly focused on showing the shot sequences. Lil VFX visible. The content of the display monitor shows the main character editing the video in real time.</p>
             </div>
         </div>
+
+        <!-- SoundCloud Embed -->
+        <div class="gallery-item">
+            <iframe width="100%" height="166" scrolling="no" frameborder="no" 
+                allow="autoplay" 
+                src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/asteria/whatd-i-say&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
+            </iframe>
+            <div class="gallery-description">
+                <p><strong>Song used: What'd I Say</strong></p>
+                <p><strong> by asteria + d3r</strong></p>
+                <p>2:00-2:25</p>
+            </div>
+        </div>
     </div>
 </div>
 
