--- a/currently.html
+++ b/currently.html
@@ -386,7 +386,10 @@
             </iframe>
             <div class="gallery-description">
                 <p><strong>Interactive Control Panel</strong></p>
-                <p>This piece will be fabricated using laser cutters, 3D printers, Arduino LCD displays, and old buttons from kid toys. The control panel symbolizes technology’s illusion of control. Although the main character appears to adjust her internal state, monitoring and manipulating focus or mood, the panel itself ultimately does nothing. This parallels our perceived agency over internet use, despite hidden systems like data collection and addictive design that quietly shape our behavior. The panel becomes an “operational double,” giving the appearance of control while never actually altering reality.</p>
+                <p>This piece will be fabricated using laser cutters, 3D printers, Arduino LCD displays, and old buttons from kid toys.</p>
+                    <p>The control panel symbolizes technology’s illusion of control. Although the main character appears to adjust her internal state, monitoring and manipulating focus or mood, the panel itself ultimately does nothing.</p>
+                        <p>This parallels our perceived agency over internet use, despite hidden systems like data collection and addictive design that quietly shape our behavior.</p>
+                        <p>The panel becomes an “operational double,” giving the appearance of control while never actually altering reality.</p>
             </div>
         </div>
     </div>
