--- a/currently.html
+++ b/currently.html
@@ -402,7 +402,9 @@
             </iframe>
             <div class="gallery-description">
                 <p><strong>Draft video simulating shot list</strong></p>
-                <p>Mostly focused on showing the shot sequences. Lil VFX visible. The content of the display monitor shows the main character editing the video in real time.</p>
+                <p>Mostly focused on showing the shot sequences.</p>
+                    <p>Lil VFX visible.</p>
+                    <p>The content of the display monitor shows the main character editing the video in real time.</p>
             </div>
         </div>
 
