--- a/currently.html
+++ b/currently.html
@@ -389,7 +389,7 @@
                 onmouseout="this.contentWindow.postMessage('pause', '*');">
             </iframe>
             <div class="gallery-description">
-                <p><strong>Visualizing an AI "brain" (AE)</strong></p>
+                <p><strong>Brain Visualization (AE)</strong></p>
                 <p>Smooth gradients between colors and shapes lend the composition a hypnotic, dreamlike quality, blurring the line between something living and an artificial, computer-generated environment.</p>
             </div>
         </div>
@@ -401,7 +401,7 @@
                 onmouseout="this.contentWindow.postMessage('pause', '*');">
             </iframe>
             <div class="gallery-description">
-                <p><strong>Visualization v2 (AE)</strong></p>
+                <p><strong>Brain Visualization v2 (AE)</strong></p>
                 <p>Simultaneously sensual and slightly uncanny, invoking the sense of looking up close at a viscous biological mass or a surreal, alien landscape.</p>
             </div>
         </div>
@@ -457,15 +457,13 @@
     <!-- Placeholder for Interactive Panel -->
     <div class="right hidden" id="interactive-panel-gallery">
         <div class="gallery-item" style="width: 600px;"> <!-- Adjusted width -->
-            <iframe src="https://drive.google.com/file/d/1nqYlf22bLAENsBPDH_l_4jEriyuK3fn8/preview" 
+            <iframe src="https://drive.google.com/file/d/19aAT2gDHZDQ2U3jYgfXAyVNBM_InhG4s/preview" 
                 width="600" height="500" allowfullscreen> <!-- Adjusted width and increased height -->
             </iframe>
             <div class="gallery-description">
                 <p><strong>Interactive Control Panel</strong></p>
-                <p>This piece will be fabricated using laser cutters, 3D printers, Arduino LCD displays, and old buttons from kid toys.</p>
-                <p>The control panel symbolizes technology’s illusion of control. Although the main character appears to adjust her internal state, monitoring and manipulating focus or mood, the panel itself ultimately does nothing.</p>
-                <p>This parallels our perceived agency over internet use, despite hidden systems like data collection and addictive design that quietly shape our behavior.</p>
-                <p>The panel becomes an “operational double,” giving the appearance of control while never actually altering reality.</p>
+                <p>The control panel is a laser cut console filled with recycled toy buttons, arcade switches, dials, a joystick, and an Arduino LCD display. This is a prototype, so the final version will likely have fewer buttons. Most inputs are just for show; only a couple actually do anything. Each of them alter the video slightly by changing color hues, adding blur, glitching clips, etc. By allowing participant to discover which buttons work, the panel shows how technology can promise total control while giving almost none. Conceptually it sits beside algorithm driven platforms that mimic choice while quietly steering results to serve the platform’s own goals, not the user’s. <p>
+                    <p> In this case, you're serving mine. (◕ᴗ◕✿)</p> 
             </div>
         </div>
     </div>
