--- a/currently.html
+++ b/currently.html
@@ -462,7 +462,8 @@
             </iframe>
             <div class="gallery-description">
                 <p><strong>Interactive Control Panel</strong></p>
-                <p>The control panel is a laser cut console filled with recycled toy buttons, arcade switches, dials, a joystick, and an Arduino LCD display. This is a prototype, so the final version will likely have fewer buttons. Most inputs are just for show; only a couple actually do anything. Each of them alter the video slightly by changing color hues, adding blur, glitching clips, etc. By allowing participant to discover which buttons work, the panel shows how technology can promise total control while giving almost none. Conceptually it sits beside algorithm driven platforms that mimic choice while quietly steering results to serve the platform’s own goals, not the user’s. <p>
+                <p> *This is a prototype. The final version may look drastically different.* </p>
+                <p>The control panel is a laser cut console filled with recycled toy buttons, arcade switches, dials, a joystick, and an Arduino LCD display. This is a prototype, so the final version will likely have fewer buttons. Most inputs are just for show; only a couple actually do anything. Each of them alter the video slightly by changing color hues, adding blur, glitching clips, etc. By allowing participant to discover which buttons work, the panel shows how technology can promise total control while giving almost none. Conceptually it sits beside algorithm driven platforms that mimic choice while quietly steering results to serve the platform’s own goals, not the user’s. </div>
                     <p> In this case, you're serving mine. (◕ᴗ◕✿)</p> 
             </div>
         </div>
