--- a/currently.html
+++ b/currently.html
@@ -375,7 +375,7 @@
         </div>
 
         <!-- Research Summarized Button placed BELOW the buttons -->
-        <div class="expandable-box research-box" onclick="window.open('https://docs.google.com/document/d/1m19moXU8Wf83u4iNiWQjssmwbKQEqLfmTlxPQAyOgDk/edit?usp=sharing', '_blank')" style="margin-top: 10px; text-align: center;">
+        <div class="expandable-box research-box" onclick="window.open('https:', '_blank')" style="margin-top: 10px; text-align: center;">
             Research Summarized
         </div>
     </div>
