--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <p>Hi, it's so good to see you! Welcome to my portfolio site :) Every day I see my dream, so I invite you to see it too. Thank you for visiting!</p>
 
         <div class="cute-box">
-            <a href="https://damarisguzman.neocities.org/about" class="gradient-button">
+            <a href="https://damaris-guzman.github.io/portfolio/about.html" class="gradient-button">
                 Click to learn about me
             </a>
         </div>
