--- a/index.html
+++ b/index.html
@@ -182,11 +182,14 @@
 <body>
 
 <div class="header">
-    <h1><a href="/about">
-        <span>D</span><span>a</span><span>m</span><span>a</span><span>r</span><span>i</span><span>s</span>
-        <span> </span>
-        <span>G</span><span>U</span><span>Z</span><span>M</span><span>A</span><span>N</span>
-    </a></h1>
+    <h1>
+        <a href="/about">
+            <span>D</span><span>a</span><span>m</span><span>a</span><span>r</span><span>i</span><span>s</span>
+            <span> </span>
+            <span>G</span><span>U</span><span>Z</span><span>M</span><span>A</span><span>N</span>
+            <span class="wave-icon">★~(◠‿◕✿)</span>
+        </a>
+    </h1>
 </div>
 
 <div class="main-content">
@@ -195,7 +198,7 @@
         <p>Hi, it's so good to see you! Welcome to my portfolio site :) Every day I see my dream, so I invite you to see it too. Thank you for visiting!</p>
 
         <div class="cute-box">
-            <a href="https://damaris-guzman.github.io/portfolio/about.html" class="gradient-button">
+            <a href="https://damarisguzman.neocities.org/about" class="gradient-button">
                 Click to learn about me
             </a>
         </div>
@@ -203,7 +206,7 @@
 
     <div class="grid-container">
         <div class="grid-item">
-            <a href="https://damaris-guzman.github.io/portfolio/currently.html">
+            <a href="currently.html">
                 <img src="https://damarisguzman.neocities.org/Portfolio/red%20tissue1.png" alt="Current Projects">
                 <div class="overlay-text">Current Project/s</div>
             </a>
@@ -215,25 +218,25 @@
           </a>
         </div>
         <div class="grid-item">
-          <a href="https://damaris-guzman.github.io/portfolio/newmaris.html">
+          <a href="https://damarisguzman.neocities.org/newmaris">
             <img src="https://damarisguzman.neocities.org/Portfolio/7a280062-d254-4330-8f43-5c0b854049b8_rwc_180x0x920x720x1280.jpg" alt="More Media">
             <div class="overlay-text">New Media</div>
           </a>
         </div>
         <div class="grid-item">
-           <a href="https://damaris-guzman.github.io/portfolio/video.html">
+           <a href="https://damarisguzman.neocities.org/video">
             <img src="https://damarisguzman.neocities.org/Portfolio/spiral0.png" alt="Video Editing">
             <div class="overlay-text">Video Editing</div>
            </a>
         </div>
         <div class="grid-item">
-          <a href="https://damaris-guzman.github.io/portfolio/3danimation.html"> 
+          <a href="3danimation.html"> 
             <img src="https://damarisguzman.neocities.org/Portfolio/Guzman_One_2024.png" alt="3D Animation">
             <div class="overlay-text">3D Animation</div>
           </a>
         </div>
         <div class="grid-item">
-          <a href="https://damaris-guzman.github.io/portfolio/archive.html">
+          <a href="https://damarisguzman.neocities.org/archive">
             <img src="https://damarisguzman.neocities.org/Portfolio/IMG_5149.PNG" alt="Archive">
             <div class="overlay-text">Archive</div>
           </a>
