--- a/newmaris.html
+++ b/newmaris.html
@@ -566,7 +566,7 @@
             <div class="studio-gallery-grid">
                                 <div class="studio-gallery-item" style="border: 1px solid #ccc; background: #fff; border-radius: 5px; padding: 10px;">
                     <h3>I visit the Artist:</h3>
-                    <h3>Studio visit with Scott Snibbe! (November, 2024)</h3>
+                    <h3>Studio visit with Scott Snibbe! (November, 2025)</h3>
                     <img src="https://damarisguzman.neocities.org/Portfolio/snibbe.png" alt="Studio Three">
                     <p>I was blessed with an opportunity to visit Scott Snibbe’s studio! He let me interact with a wall-sized touchscreen, where I swirled galaxies in Gravilux (2010) and trailed pixel-ants in Antograph (2010); a hands-on reminder that mindfulness can live inside code. Then he showed me his recent project "Hidden Geometries": low-res deity grids, thangka-ratio overlays, and layer after layer of mineral pigment mixed with heated animal glue.</p>
                     <p>Snibbe was extremely friendly and even sent me off with a few gifts!</p>
@@ -586,12 +586,12 @@
                     <h3>Artist Visits Me:</h3>
                     <h3>Studio visit with Lilla LoCurto and Bill Outcault!</h3>
                         <h3>(April, 2025)</h3>
-                    <p>The duo stopped by my studio for an impromptu look at the sprawling, multi-system piece you’ll find on the Current Projects page. Their frank critique (complete with several laughs) exposed just how tangled my explanation had become and challenged me to condense the concept into a crisp, elevator-length pitch. That nudge toward clarity sparked an immediate revised written summary and a streamlined storyboard.</p>
+                    <p>The duo stopped by my studio for an impromptu look at the sprawling, multi-system piece you’ll find on the Current Projects page. Their frank critique (complete with several laughs) exposed just how tangled my explanation had become and challenged me to condense the concept into a crisp, elevator-length pitch. That nudge toward clarity sparked an immediate revised written summary and a summarized storyboard.</p>
                 </div>
                 <div class="studio-gallery-item" style="border: 1px solid #ccc; background: #fff; border-radius: 5px; padding: 10px;">
                     <h3>Artist Visits Me:</h3>
                     <h3>Studio visit with Tamiko Thiel! (November, 2024)</h3>
-                    <p>Pioneering AR/VR artist Tamiko Thiel met with me (before I even had a formal studio) to unpack my early experiments in technological embodiment and real-time image generation. Drawing on her decades of spatial storytelling, she urged me to strip visuals to their essentials for accessibility, layer information so users aren’t overwhelmed, and test interactions on low-power devices first. Her guidance helped me understand a new level of storytelling thru AR.</p>
+                    <p>Pioneering AR/VR artist Tamiko Thiel met with me (before I even had a formal studio) to unpack my early experiments in technological embodiment and real-time image generation. Drawing on her decades of spatial storytelling, she advised that I use simple visuals for accessibility, layer information so users aren’t overwhelmed, and test interactions on low-power devices first. Her guidance helped me understand a new level of storytelling thru AR.</p>
                 </div>
 
             </div>
