--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connecting</title>
+    <title>You are Loved</title>
     <style>
         /* Import DepartureMono font */
         @font-face {
@@ -198,7 +198,7 @@
         <p>Hi, it's so good to see you! Welcome to my portfolio site :) Every day I see my dream, so I invite you to see it too. Thank you for visiting!</p>
 
         <div class="cute-box">
-            <a href="https://damarisguzman.neocities.org/about" class="gradient-button">
+            <a href=""https://damaris-guzman.github.io/portfolio/about.html" class="gradient-button">
                 Click to learn about me
             </a>
         </div>
@@ -218,13 +218,13 @@
           </a>
         </div>
         <div class="grid-item">
-          <a href="https://damarisguzman.neocities.org/newmaris">
+          <a href="https://damaris-guzman.github.io/portfolio/newmaris.html">
             <img src="https://damarisguzman.neocities.org/Portfolio/7a280062-d254-4330-8f43-5c0b854049b8_rwc_180x0x920x720x1280.jpg" alt="More Media">
             <div class="overlay-text">New Media</div>
           </a>
         </div>
         <div class="grid-item">
-           <a href="https://damarisguzman.neocities.org/video">
+           <a href=""https://damaris-guzman.github.io/portfolio/video.html">
             <img src="https://damarisguzman.neocities.org/Portfolio/spiral0.png" alt="Video Editing">
             <div class="overlay-text">Video Editing</div>
            </a>
@@ -236,7 +236,7 @@
           </a>
         </div>
         <div class="grid-item">
-          <a href="https://damarisguzman.neocities.org/archive">
+          <a href=""https://damaris-guzman.github.io/portfolio/archive.html">
             <img src="https://damarisguzman.neocities.org/Portfolio/IMG_5149.PNG" alt="Archive">
             <div class="overlay-text">Archive</div>
           </a>
