--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
           </a>
         </div>
         <div class="grid-item">
-           <a href=""https://damaris-guzman.github.io/portfolio/video.html">
+           <a href="https://damaris-guzman.github.io/portfolio/video.html">
             <img src="https://damarisguzman.neocities.org/Portfolio/spiral0.png" alt="Video Editing">
             <div class="overlay-text">Video Editing</div>
            </a>
